# Rag_chatbot_api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/services/: chatbot.py  ingest.py
